--- a/DiscussionPanel.csproj
+++ b/DiscussionPanel.csproj
@@ -44,6 +44,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -71,19 +72,31 @@
     <Content Include="App_Data\Database1_log.ldf">
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
+    <Content Include="DoubtPost.aspx" />
     <Content Include="images\1.png" />
     <Content Include="images\2.png" />
+    <Content Include="images\discussions.svg" />
+    <Content Include="images\doubt.svg" />
     <Content Include="images\home.svg" />
     <Content Include="images\plus.svg" />
     <Content Include="images\profile.svg" />
     <Content Include="LoginPage.aspx" />
+    <Content Include="Navbar.html" />
     <Content Include="ProfilePage.aspx" />
     <Content Include="RegisterPage.aspx" />
     <Content Include="styles\base.css" />
+    <Content Include="UserDiscussions.aspx" />
     <Content Include="ViewDiscussions.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DoubtPost.aspx.cs">
+      <DependentUpon>DoubtPost.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DoubtPost.aspx.designer.cs">
+      <DependentUpon>DoubtPost.aspx</DependentUpon>
+    </Compile>
     <Compile Include="LoginPage.aspx.cs">
       <DependentUpon>LoginPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -105,6 +118,13 @@
     </Compile>
     <Compile Include="RegisterPage.aspx.designer.cs">
       <DependentUpon>RegisterPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UserDiscussions.aspx.cs">
+      <DependentUpon>UserDiscussions.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserDiscussions.aspx.designer.cs">
+      <DependentUpon>UserDiscussions.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewDiscussions.aspx.cs">
       <DependentUpon>ViewDiscussions.aspx</DependentUpon>
