--- a/bin/DiscussionPanel.dll.config
+++ b/bin/DiscussionPanel.dll.config
@@ -17,7 +17,7 @@
     <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
   </appSettings>
   <connectionStrings>
-    <add name="userConn" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;D:\College Documents\Semester 5\WAD\Discussion Panel\DiscussionPanel\App_Data\Database1.mdf&quot;;Integrated Security=True" />
+    <add name="userConn" connectionString='Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="D:\College Documents\Semester 5\WAD\Discussion Panel\DiscussionPanel\App_Data\Database1.mdf";Integrated Security=True' />
     <add name="UserDiscussionsConn" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
