adding reply feature

--- a/DiscussionPanel.csproj
+++ b/DiscussionPanel.csproj
@@ -87,6 +87,7 @@
     <Content Include="ProfilePage.aspx" />
     <Content Include="RegisterPage.aspx" />
     <Content Include="styles\base.css" />
+    <Content Include="Thread.aspx" />
     <Content Include="UserDiscussions.aspx" />
     <Content Include="ViewDiscussions.aspx" />
     <Content Include="Web.config" />
@@ -127,6 +128,13 @@
     </Compile>
     <Compile Include="RegisterPage.aspx.designer.cs">
       <DependentUpon>RegisterPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Thread.aspx.cs">
+      <DependentUpon>Thread.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Thread.aspx.designer.cs">
+      <DependentUpon>Thread.aspx</DependentUpon>
     </Compile>
     <Compile Include="UserDiscussions.aspx.cs">
       <DependentUpon>UserDiscussions.aspx</DependentUpon>
